Fix styling on Firefox and small screens

--- a/src/ui/styles/_context.scss
+++ b/src/ui/styles/_context.scss
@@ -8,14 +8,23 @@
 	left: var(--left);
 	padding: $gutter/2 0;
 	min-width: 170px;
-	background: $context;
+	background: rgba($context, .98);
 	border-radius: $radius;
 	transform: translate(var(--x, 0), var(--y, 0));
-	backdrop-filter: blur(10px);
 	z-index: 3;
+
+	@supports (backdrop-filter: blur(10px)) {
+		background: $context;
+		backdrop-filter: blur(10px);
+	}
+
+	@media (max-width: 800px) {
+		font-size: .9em;
+	}
 
 	&--floating {
 		position: fixed;
+		min-width: 210px;
 		border-radius: 12px;
 	}
 
@@ -55,7 +64,7 @@
 	}
 
 	&__description {
-		font-size: .9em;
+		font-size: .86em;
 		color: $light;
 	}
 
